--- a/str/Tpl/default/Admin/System/portOut.html
+++ b/str/Tpl/default/Admin/System/portOut.html
@@ -73,7 +73,7 @@
                                                 <tr>
                                                     <th>通道资源id</th>
                                                     <th>直播频道号</th>
-                                                    <th>所属检察院</th>
+                                                    <th>yms通道号</th>
                                                     <th>是否永久使用</th>
                                                     <th>使用开始时间</th>
                                                     <th>使用结束时间</th>
@@ -85,7 +85,7 @@
                                                 <tr>
                                                     <td>{$vo.L_ID}</td>
                                                     <td>{$vo.L_Channel}</td>
-                                                    <td>{$vo.C_Name}</td>
+                                                    <td>{$vo.L_Decoder}</td>
                                                     <td><if condition="$vo.L_IfAlways eq 1 ">是<else/>否</if></td>
                                                     <td>{$vo.L_StartDate}</td>
                                                     <td>{$vo.L_EndDate}</td>
