--- a/str/Tpl/default/Admin/MyTask/index.html
+++ b/str/Tpl/default/Admin/MyTask/index.html
@@ -106,6 +106,7 @@
                                                     <!--<th>状态</th>-->
                                                     <th>案件名称</th>
                                                     <th>庭审听证室</th>
+                                                    <th>播放通道号</th>
                                                     <th>开始时间</th>
                                                     <th>结束时间</th>
                                                     <th>操作</th>
@@ -124,6 +125,7 @@
                                                 </td>-->
                                                 <td>{$vo.P_CaseName}</td>
                                                 <td>{$vo.C_Name}{$vo.CR_Name}</td>
+                                                <td>{$vo.P_OutPID}</td>
                                                 <td>{$vo.P_StartTime}</td>
                                                 <td>{$vo.P_EndTime}</td>
                                                 <td width="20%">
