--- a/str/Tpl/default/Admin/Calendar/checkTask.html
+++ b/str/Tpl/default/Admin/Calendar/checkTask.html
@@ -31,7 +31,7 @@
                 <td><label>结束时间：</label><input type="text" name="P_EndTime" style="width:300px" onfocus="WdatePicker({skin: 'whyGreen', dateFmt: 'yyyy-M-d H:mm:ss'})" value="{$playlist.P_EndTime}" disabled="disabled"></td>
             </tr>
             <tr>
-                <td><label>案件编号：</label><input type="text" name="P_CaseName" style="width:200px" value="{$playlist.P_CaseName}" disabled="disabled"></td>
+                <td><label>案件名称：</label><input type="text" name="P_CaseName" style="width:200px" value="{$playlist.P_CaseName}" disabled="disabled"></td>
                 <td><label>庭次：</label><input type="text" name="P_CourtNo" style="width:200px" value="{$playlist.P_CourtNo}" disabled="disabled"></td>
             </tr>
             <tr>
