--- a/str/Tpl/default/Admin/Calendar/index.html
+++ b/str/Tpl/default/Admin/Calendar/index.html
@@ -94,8 +94,8 @@
                         <div id="calendar" ></div>
                     </div>
                 </div><!-- /.page-content-area -->
-                <input type="text" id="P_StartTime" style="width:200px" placeholder="案件起始时间"  onfocus="WdatePicker({dateFmt: 'yyyy-M-d H:mm:ss'})">
-                <input type="text" id="P_EndTime" style="width:200px" placeholder="案件结束时间"  onfocus="WdatePicker({dateFmt: 'yyyy-M-d H:mm:ss'})">
+                <input type="text" id="P_StartTime" style="width:200px" placeholder="听证会开始时间"  onfocus="WdatePicker({dateFmt: 'yyyy-M-d H:mm:ss'})">
+                <input type="text" id="P_EndTime" style="width:200px" placeholder="听证会结束时间"  onfocus="WdatePicker({dateFmt: 'yyyy-M-d H:mm:ss'})">
                 <a id="excelExport" href="__GROUP__/Calendar/exportToExcel" target="_blank" class="fm-button ui-state-default ui-corner-all fm-button-icon-left btn btn-sm btn-primary"><i class="ace-icon fa fa-file-excel-o"></i>导出到excel</a>
                 <p></p>
                 <if condition="$admin">
