--- a/str/Tpl/default/Admin/MyTask/index.html
+++ b/str/Tpl/default/Admin/MyTask/index.html
@@ -94,9 +94,9 @@
                                         <form class="nav-search" id="nav-search" method="post" action="__GROUP__/MyTask/searchlist">
                                             <p style ='margin: '>
                                                 <input type="hidden" name="isSearch" value="1" />
-                                                <input type="text" id="P_StartTime" name="StartTime" style="width:200px" placeholder="案件起始时间"  onfocus="WdatePicker({dateFmt:'yyyy-M-d H:mm:ss'})" value="{$time[StartTime]}">
+                                                <input type="text" id="P_StartTime" name="StartTime" style="width:200px" placeholder="听证会开始时间"  onfocus="WdatePicker({dateFmt:'yyyy-M-d H:mm:ss'})" value="{$time[StartTime]}">
                                                 ------
-                                                <input type="text" id="P_EndTime"  name="EndTime" style="width:200px" placeholder="案件结束时间"  onfocus="WdatePicker({dateFmt:'yyyy-M-d H:mm:ss'})" value="{$time[EndTime]}"> 
+                                                <input type="text" id="P_EndTime"  name="EndTime" style="width:200px" placeholder="听证会结束时间"  onfocus="WdatePicker({dateFmt:'yyyy-M-d H:mm:ss'})" value="{$time[EndTime]}"> 
                                                 <button type="submit" class="btn btn-success btn-sm">查询<i class="ace-icon fa fa-search icon-on-right bigger-110"></i></button>
                                             </p>
                                         </form>
@@ -105,7 +105,7 @@
                                                 <tr>
                                                     <!--<th>状态</th>-->
                                                     <th>案件名称</th>
-                                                    <th>庭审听证室</th>
+                                                    <th>听证室</th>
                                                     <th>播放通道号</th>
                                                     <th>开始时间</th>
                                                     <th>结束时间</th>
