--- a/str/Tpl/default/Admin/VerifyTask/index.html
+++ b/str/Tpl/default/Admin/VerifyTask/index.html
@@ -100,7 +100,7 @@
                                                     <th>状态</th>
                                                     <th>申请时间</th>
                                                     <th>案件名称</th>
-                                                    <th>庭审检察院</th>
+                                                    <th>检察院</th>
                                                     <th>开始时间</th>
                                                     <th>结束时间</th>
                                                     <th>操作</th>
