--- a/str/Tpl/default/Admin/ApplyTask/index.html
+++ b/str/Tpl/default/Admin/ApplyTask/index.html
@@ -94,7 +94,7 @@
                                                 <tr>
                                                     <th>编辑时间</th>
                                                     <th>案件名称</th>
-                                                    <th>庭审检察院</th>
+                                                    <th>检察院</th>
                                                     <th>开始时间</th>
                                                     <th>结束时间</th>
                                                     <th>操作</th>
