--- a/str/Tpl/default/Admin/System/log.html
+++ b/str/Tpl/default/Admin/System/log.html
@@ -98,9 +98,9 @@
                                             <form class="nav-search" id="nav-search" method="post" action="__GROUP__/System/findlog">
                                                 <p style ='margin: '>
                                                     <input type="hidden" name="isSearch" value="1" />
-                                                    <input type="text" id="P_StartTime" name="StartTime" style="width:200px" placeholder="案件起始时间"  onfocus="WdatePicker({dateFmt: 'yyyy-MM-dd H:mm:ss'})" value="{$time[StartTime]}">
+                                                    <input type="text" id="P_StartTime" name="StartTime" style="width:200px" placeholder="听证会开始时间"  onfocus="WdatePicker({dateFmt: 'yyyy-MM-dd H:mm:ss'})" value="{$time[StartTime]}">
                                                     ------
-                                                    <input type="text" id="P_EndTime"  name="EndTime" style="width:200px" placeholder="案件结束时间"  onfocus="WdatePicker({dateFmt: 'yyyy-MM-dd H:mm:ss'})" value="{$time[EndTime]}"> 
+                                                    <input type="text" id="P_EndTime"  name="EndTime" style="width:200px" placeholder="听证会结束时间"  onfocus="WdatePicker({dateFmt: 'yyyy-MM-dd H:mm:ss'})" value="{$time[EndTime]}"> 
                                                     <button type="submit" class="btn btn-success btn-sm">查询<i class="ace-icon fa fa-search icon-on-right bigger-110"></i></button>
                                                 </p>
                                             </form>
@@ -109,7 +109,7 @@
                                             <thead>
                                                 <tr>
                                                     <th>操作时间</th>
-                                                    <th>申请单ID</th>
+                                                    <th style="width: 300px !important">申请单ID</th>
                                                     <th>操作内容</th>
                                                     <th>操作人</th>		
                                                     <th>操作</th>
