--- a/str/Tpl/default/Admin/CaseInput/addCase.html
+++ b/str/Tpl/default/Admin/CaseInput/addCase.html
@@ -90,7 +90,7 @@
                                         $("#selectCourtRoom").append("<option value=''>  </option>");
                                         for (i = 0; i < msg.data.length; i++) {
                                             //循环插入option
-                                            $("#selectCourtRoom").append("<option value='" + msg.data[i].CR_ID + "'>[" + msg.data[i].CR_Name + "]  " + msg.data[i].CR_URL + "  端口:" + msg.data[i].CR_Port + "</option>");
+                                            $("#selectCourtRoom").append("<option value='" + msg.data[i].CR_ID + "'>[" + msg.data[i].CR_Name + "]</option>");
                                         }
                                     }
                                 });
