--- a/str/Tpl/default/Admin/VerifyTask/checkTask.html
+++ b/str/Tpl/default/Admin/VerifyTask/checkTask.html
@@ -89,9 +89,9 @@
                                         for (i = 0; i < msg.data.length; i++) {
                                             //循环插入option
                                             if( {$playlist.P_CourtRoomIn} == msg.data[i].CR_ID){
-                                                $("#selectCourtRoom").append("<option value='" + msg.data[i].CR_ID + "' selected='selected'>[" + msg.data[i].CR_Name + "]  " + msg.data[i].CR_URL + "  端口:" + msg.data[i].CR_Port + "</option>");
+                                                $("#selectCourtRoom").append("<option value='" + msg.data[i].CR_ID + "' selected='selected'>[" + msg.data[i].CR_Name + "]</option>");
                                             }else{
-                                                $("#selectCourtRoom").append("<option value='" + msg.data[i].CR_ID + "'>[" + msg.data[i].CR_Name + "]  " + msg.data[i].CR_URL + "  端口:" + msg.data[i].CR_Port + "</option>");
+                                                $("#selectCourtRoom").append("<option value='" + msg.data[i].CR_ID + "'>[" + msg.data[i].CR_Name + "]</option>");
                                             }
                                             
                                         }
