--- a/str/Tpl/default/Admin/System/log.html
+++ b/str/Tpl/default/Admin/System/log.html
@@ -109,7 +109,7 @@
                                             <thead>
                                                 <tr>
                                                     <th>操作时间</th>
-                                                    <th style="width: 300px !important">申请单ID</th>
+                                                    <th style="max-width: 300px !important">申请单ID</th>
                                                     <th>操作内容</th>
                                                     <th>操作人</th>		
                                                     <th>操作</th>
