--- a/str/Tpl/default/Admin/CaseInput/handAddCase.html
+++ b/str/Tpl/default/Admin/CaseInput/handAddCase.html
@@ -110,7 +110,7 @@
                         <span class="addName"><i class="ace-icon fa fa-plus-circle"></i></span>
                         <span class="cutName"><i class="ace-icon fa fa-minus-circle"></i></span>
                     </div>
-                    <div id ="Hear">
+                    <div id ="hear">
                         <label class="memtitel">听证员：</label><input type="text" name="hear[]" value="" placeholder="姓名">
                         <span class="addName"><i class="ace-icon fa fa-plus-circle"></i></span>
                         <span class="cutName"><i class="ace-icon fa fa-minus-circle"></i></span>
