听证类型添加其他

--- a/str/Tpl/default/Admin/CaseInput/handAddCase.html
+++ b/str/Tpl/default/Admin/CaseInput/handAddCase.html
@@ -47,7 +47,8 @@
                                     <option value="6"> 审查逮捕案件听证会 </option>		
                                     <option value="7"> 拟不起诉案件听证会 </option>						
                                     <option value="8"> 羁押必要性审查案件听证会 </option>	   
-                                    <option value="9"> 未成年人刑事案件听证会 </option>													
+                                    <option value="9"> 未成年人刑事案件听证会 </option>	
+                                    <option value="10"> 其他案件听证会 </option>													
                                                                                                             
                                 </select>
                             </td>
